# ts2rs

./: Cargo.toml  LICENSE  README.md
examples/: car.ts  import_from_file.rs  interface.rs  raw_import.rs
src/: interface.rs  lib.rs  ts_interface.pest
tests/: interface.rs
