[package]
name = "ts2rs"
version = "0.2.0"
edition = "2021"
authors = ["j4ger"]
license = "MIT"
description = "Macros that imports Typescript interfaces into Rust."
categories = ["development-tools::ffi", "parser-implementations", "web-programming"]
repository = "https://github.com/j4ger/ts2rs"
keywords = ["web", "typescript", "rust", "interface"]

[lib]
proc-macro = true
doc = true

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.36"

[features]
serde = []
